tests/rosetta/out/Haskell/abelian-sandpile-model.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/abelian-sandpile-model.hs:151:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/abelian-sandpile-model.hs:144:1
                 /workspace/mochi/tests/rosetta/out/Haskell/abelian-sandpile-model.hs:151:1
    |
151 | main = do
    | ^^^^
