tests/rosetta/out/Haskell/abelian-sandpile-model.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T09:31:08Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isInfixOf, isPrefixOf)
import qualified Data.List as List
import qualified Data.Map as Map
import Data.Maybe (fromMaybe)

forLoop :: Int -> Int -> (Int -> Maybe a) -> Maybe a
forLoop start end f = go start
  where
    go i
      | i < end =
          case f i of
            Just v -> Just v
            Nothing -> go (i + 1)
      | otherwise = Nothing

whileLoop :: (() -> Bool) -> (() -> Maybe a) -> Maybe a
whileLoop cond body = go ()
  where
    go _
      | cond () =
          case body () of
            Just v -> Just v
            Nothing -> go ()
      | otherwise = Nothing

avg :: (Integral a) => [a] -> a
avg xs
  | null xs = 0
  | otherwise = div (sum xs) (fromIntegral (length xs))

data MGroup k a = MGroup {key :: k, items :: [a]} deriving (Show)

_group_by :: (Ord k) => [a] -> (a -> k) -> [MGroup k a]
_group_by src keyfn =
  let go [] m order = (m, order)
      go (x : xs) m order =
        let k = keyfn x
         in case Map.lookup k m of
              Just is -> go xs (Map.insert k (is ++ [x]) m) order
              Nothing -> go xs (Map.insert k [x] m) (order ++ [k])
      (m, order) = go src Map.empty []
   in [MGroup k (fromMaybe [] (Map.lookup k m)) | k <- order]

_indexString :: String -> Int -> String
_indexString s i =
  let idx = if i < 0 then i + length s else i
   in if idx < 0 || idx >= length s
        then error "index out of range"
        else [s !! idx]

_append :: [a] -> a -> [a]
_append xs x = xs ++ [x]

_input :: IO String
_input = getLine

_readInput :: Maybe String -> IO String
_readInput Nothing = getContents
_readInput (Just p)
  | null p || p == "-" = getContents
  | otherwise = readFile p

_writeOutput :: Maybe String -> String -> IO ()
_writeOutput mp text = case mp of
  Nothing -> putStr text
  Just p
    | null p || p == "-" -> putStr text
    | otherwise -> writeFile p text

_split :: Char -> String -> [String]
_split _ "" = [""]
_split d s =
  let (h, t) = break (== d) s
   in h : case t of
        [] -> []
        (_ : rest) -> _split d rest

_parseCSV :: String -> Bool -> Char -> [Map.Map String String]
_parseCSV text header delim =
  let ls = filter (not . null) (lines text)
   in if null ls
        then []
        else
          let heads =
                if header
                  then _split delim (head ls)
                  else ["c" ++ show i | i <- [0 .. length (_split delim (head ls)) - 1]]
              start = if header then 1 else 0
              row line =
                let parts = _split delim line
                 in Map.fromList
                      [ (heads !! j, if j < length parts then parts !! j else "")
                        | j <- [0 .. length heads - 1]
                      ]
           in map row (drop start ls)

data AnyValue = VInt Int | VDouble Double | VString String | VBool Bool deriving (Show)

_asInt :: AnyValue -> Int
_asInt (VInt n) = n
_asInt v = error ("expected int, got " ++ show v)

_asDouble :: AnyValue -> Double
_asDouble (VDouble d) = d
_asDouble v = error ("expected double, got " ++ show v)

_asString :: AnyValue -> String
_asString (VString s) = s
_asString v = error ("expected string, got " ++ show v)

_asBool :: AnyValue -> Bool
_asBool (VBool b) = b
_asBool v = error ("expected bool, got " ++ show v)

_showAny :: AnyValue -> String
_showAny (VInt n) = show n
_showAny (VDouble d) = show d
_showAny (VString s) = s
_showAny (VBool b) = if b then "true" else "false"

newPile :: Int -> [[Int]]
newPile d =
  fromMaybe ([]) $
    (let b = [] in (let y = 0 in case whileLoop (\() -> (y < d)) (\() -> (let row = [] in (let x = 0 in case whileLoop (\() -> (x < d)) (\() -> (let row = (row ++ [0]) in (let x = (_asInt (x) + 1) in Nothing))) of Just v -> Just v; Nothing -> (let b = (b ++ [row]) in (let y = (_asInt (y) + 1) in Nothing))))) of Just v -> Just v; Nothing -> Just (b)))

handlePile :: [[Int]] -> Int -> Int -> [[Int]]
handlePile pile x y = fromMaybe ([]) $
  case if (_asInt (((pile !! y) !! x)) >= 4) then (let pile = Map.adjust (\m -> Map.insert x (_asInt (((pile !! y) !! x)) - 4) m) y pile in case if (_asInt (y) > 0) then (let pile = Map.adjust (\m -> Map.insert x (_asInt (((pile !! (_asInt (y) - 1)) !! x)) + 1) m) (_asInt (y) - 1) pile in if (_asInt (((pile !! (_asInt (y) - 1)) !! x)) >= 4) then (let pile = handlePile pile x (_asInt (y) - 1) in Nothing) else Nothing) else Nothing of Just v -> Just v; Nothing -> case if (_asInt (x) > 0) then (let pile = Map.adjust (\m -> Map.insert (_asInt (x) - 1) (_asInt (((pile !! y) !! (_asInt (x) - 1))) + 1) m) y pile in if (_asInt (((pile !! y) !! (_asInt (x) - 1))) >= 4) then (let pile = handlePile pile (_asInt (x) - 1) y in Nothing) else Nothing) else Nothing of Just v -> Just v; Nothing -> case if ((_asInt (y) < dim) - 1) then (let pile = Map.adjust (\m -> Map.insert x (_asInt (((pile !! (_asInt (y) + 1)) !! x)) + 1) m) (_asInt (y) + 1) pile in if (_asInt (((pile !! (_asInt (y) + 1)) !! x)) >= 4) then (let pile = handlePile pile x (_asInt (y) + 1) in Nothing) else Nothing) else Nothing of Just v -> Just v; Nothing -> case if ((_asInt (x) < dim) - 1) then (let pile = Map.adjust (\m -> Map.insert (_asInt (x) + 1) (_asInt (((pile !! y) !! (_asInt (x) + 1))) + 1) m) y pile in if (_asInt (((pile !! y) !! (_asInt (x) + 1))) >= 4) then (let pile = handlePile pile (_asInt (x) + 1) y in Nothing) else Nothing) else Nothing of Just v -> Just v; Nothing -> (let pile = handlePile pile x y in Nothing)) else Nothing of Just v -> Just v; Nothing -> Just (pile)

drawPile :: [[Int]] -> Int -> ()
drawPile pile d =
  fromMaybe (()) $
    (let chars = [" ", "░", "▓", "█"] in (let row = 0 in whileLoop (\() -> (row < d)) (\() -> (let line = "" in (let col = 0 in case whileLoop (\() -> (col < d)) (\() -> (let v = ((pile !! row) !! col) in case if (_asInt (v) > 3) then (let v = 3 in Nothing) else Nothing of Just v -> Just v; Nothing -> (let line = (line + (chars !! v)) in (let col = (_asInt (col) + 1) in Nothing)))) of Just v -> Just v; Nothing -> case (let _ = putStrLn (_showAny (line)) in Nothing) of Just v -> Just v; Nothing -> (let row = (_asInt (row) + 1) in Nothing))))))
  where
    chars = [" ", "░", "▓", "█"]

main :: ()
main =
  fromMaybe (()) $
    (let pile = newPile 16 in (let hdim = 7 in (let pile = Map.adjust (\m -> Map.insert hdim 16 m) hdim pile in (let pile = handlePile pile hdim hdim in (let _ = drawPile pile 16 in Nothing)))))

dim = 16

main :: IO ()
main = do
  main
